@@ -71,6 +71,8 @@ QtCore
     * Fully implement support for Qt::TimeSpec of Qt::OffsetFromUTC
     * Added new methods for offsetFromUTC(), setOffsetFromUTC(), and
       toOffsetFromUTC().
+    * Added convenience methods for fromMSecsSinceEpoch() and fromTime_t()
+      to take time spec to be used in returned datetime.
 
 QtGui
 -----
